--- a/week4 assign/index.html
+++ b/week4 assign/index.html
@@ -4,9 +4,9 @@
 	<title></title>
 </head>
 <body>
-	<h1>module-4 solution</h1>
- </h2>
-	<script src="C:\Users\Ayush\Desktop\module 4\script.js"="text/javascript">
+	<h1>My module-4 solution</h1>
+ 
+	<script src="script.js" ="text/javascript">
 	
 		</script>
 
